fix link visibility

--- a/style/main.css
+++ b/style/main.css
@@ -38,4 +38,5 @@ h1 {
 
 h2 {
   font-size: 1rem;
+  z-index: 2;
 }
